--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Una plataforma de intercambio de libros PDF impulsada por la comunidad, que analiza y categoriza los libros utilizando inteligencia artificial.">
     <title>Libros CodigoMate - Devsarg discord</title>
+    <link rel="icon"
+        href="data:image/svg+xml,<%- encodeURIComponent('<svg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 100 100\'><text y=\'50%\' x=\'50%\' dominant-baseline=\'middle\' text-anchor=\'middle\' font-size=\'90\'>📚</text></svg>') %>">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -477,6 +481,9 @@
                                         <%= book.title %>
                                     </h3>
                                     <p class="author">por <%= book.author %>
+                                    </p>
+                                    <p class="description">
+                                        <%= book.description %>
                                     </p>
                                     <p class="subject">
                                         <%= book.subject %>
