--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon"
+        href="data:image/svg+xml,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%20100%20100'%3E%3Ctext%20y%3D'50%25'%20x%3D'50%25'%20dominant-baseline%3D'middle'%20text-anchor%3D'middle'%20font-size%3D'90'%3E%F0%9F%93%9A%3C%2Ftext%3E%3C%2Fsvg%3E">
     <title>
         <%= title %>
     </title>
-    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
