--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -519,7 +519,7 @@
         </div>
     </div>
 
-    <script>
+    <script nonce="<%= nonce %>">
         function toggleKeywords() {
             const content = document.getElementById('keywords-content');
             const toggle = document.getElementById('keywords-toggle');
